--- a/angular.json
+++ b/angular.json
@@ -110,6 +110,9 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
