Revert "🐞 fix(try fix base href): index.html"
This reverts commit 13b0b34bf02dfdc0bb45bff051fbe103ec75edc9.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "export NODE_OPTIONS=--openssl-legacy-provider; ng serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build --output-path docs --prod --base-href https://aldirvn.github.io/mhworld-builder/",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build --output-path docs --prod --base-href /mhworld-builder/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
